--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,27 @@
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Times New Roman', Times, serif;
+}
+header{
+  background-color: #2c2e33;
+  padding: 15px;
+  border-bottom: 2px solid #dada1d;      
+}
+header h1 {
+  color: #eee;
+  font-size: 20px;
+  text-align: center;
 }
 
-body {
+body{
   background-color: #eee;
-  overflow-x: hidden;
 }
 .container {
-  width:80%;
+  width:40%;
   margin: 0px auto;
+}
+
+form {
+  margin: 20px;
 }
